# hekox

./: 2  Cargo.toml  itemList
backups/: backupcargotoml
backups/backup/: backup.rs  main.rs
backups/backup2/: lib.rs  texture.rs
src/: backup.rs  backup2.rs  data.rs  example  lib.rs  main.rs  shader.wgsl  texture.rs
src/models/: junk.glb
src/renderer/: camera.rs  instance.rs  mod.rs  model.rs  object.rs  resource.rs  resource_bkp.rs  shader.wgsl  texture.rs  ui.rs
src/shaders/: fs.wgsl  vs.wgsl
