[package]
name = "hekox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init	= "2.0.1"
vulkano		= "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win	= "0.30.0"
winit		= "0.26"
bytemuck	= "1.8.0"
